worked on chords

--- a/scales/index.html
+++ b/scales/index.html
@@ -52,7 +52,7 @@
                         </li>
                     </ul>
                 </div>
-                <svg id="svg-surface"></svg>
+                <svg class="scales" id="svg-surface"></svg>
             </div>
             
             <div class="container-dark">            
@@ -157,6 +157,7 @@
         </div>
 
         <script src="../lib/snap/snap.svg.js"></script>
+        <script src="../js/core.js"></script>
         <script src="../js/Scales.js"></script>
 
         <script src="../lib/angular/angular.js"></script>
