Preparing for refactoring, Broke zoom/pan

--- a/scales/index.html
+++ b/scales/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="surface-container">
-                    <div><svg zoom-pan class="scales select-disable" id="svg-surface" preserveAspectRatio="xMidYMin meet"></svg></div>
+                    <div><svg zoom-pan class="scales select-disable" style="border: 1px solid blue"id="svg-surface" preserveAspectRatio="xMidYMin meet"></svg></div>
                 </div>
                 <div class="zoom-pan-control">
                     <a href="" ng-click="svgSurface.resetZoomPan()">
