Starting to clean up scales.html view
added normalize.css
more css for scales.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="/app/components/mainController.js"></script>
     <script src="/assets/lib/snap/snap.svg.js"></script>
 
+    <script src="/app/shared/stateFactory.js"></script>
     <script src="/app/shared/asyncFactory.js"></script>
     <script src="/app/shared/svgSurfaceFactory.js"></script>
     <script src="/app/shared/instrumentFactory.js"></script>
