Zoom Pan for svg surface

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="/app/shared/svgSurfaceFactory.js"></script>
     <script src="/app/shared/instrumentFactory.js"></script>
     <script src="/app/shared/cookiesFactory.js"></script>
+    <script src="/app/shared/zoomPanDirective.js"></script>
 
     <script src="/app/shared/values.js"></script>
     <script src="/app/components/scales/scalesController.js"></script>
