Instrument select css, cross brower crap

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TODO</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <base href="/">
 
@@ -45,6 +45,8 @@
     <script src="/app/app.routes.js"></script>
     <script src="/app/components/mainController.js"></script>
     <script src="/assets/lib/snap/snap.svg.js"></script>
+    <script src="/assets/lib/Hamster.js"></script>
+    <script src="/assets/lib/mousewheel.js"></script>
 
     <script src="/app/shared/stateFactory.js"></script>
     <script src="/app/shared/asyncFactory.js"></script>
