--- a/index.html
+++ b/index.html
@@ -33,17 +33,46 @@
             <a ng-class="app.menuClass('circle-of-fifths')" href="/circle-of-fifths/">Circle of Fifths</a>
         </div>
     </div>
-
-    <div class="container">    
-        <div ng-view></div>
-    </div>
+ 
+    <div cookies></div>
+    <div ng-view></div>
 
 
     <div class="footer">
         <div class="footer-content">
             <a href="javascript:(function(){document.body.innerHTML+=%22<style>*{background:%20#000%20!important;color:%20#0f0%20!important;outline:%20solid%20#f00%201px%20!important;}</style>%22;})();">ghost</a>
             <br/>
-            asdasd
+
+            <script>
+                var convertScale = function() {
+                    var arr = document.getElementById('convert').value.split(' ');
+
+                    var res = [0, 2, 4, 5, 7, 9, 11];
+
+                    for(var i = 0; i < res.length; i++) {
+                        var t = arr[i];
+                        if(t.indexOf('b') >= 0) {
+                            res[i] -= 1;
+                        }
+
+                        if(t.indexOf('#') >= 0) {
+                            res[i] += 1;
+                        }
+                    }
+ 
+                    document.getElementById('result').value = res;
+                }
+            </script>
+
+            <div>
+                <label for="convert">Convert</label>
+                <input id="convert" name="convert" type="textfield" value="1 2 3 4 5 6 7"/> <button onclick="convertScale()">asd</button>
+                <br/>
+                <label for="result">Result</label>
+                <input id="result" name="result" type="textfield"/>
+            </div>
+
+
         </div>
     </div>
 
@@ -54,16 +83,16 @@
     <script src="/assets/lib/Hamster.js"></script>
     <script src="/assets/lib/mousewheel.js"></script>
 
-    <script src="/app/shared/stateFactory.js"></script>
     <script src="/app/shared/asyncFactory.js"></script>
     <script src="/app/shared/svgSurfaceFactory.js"></script>
     <script src="/app/shared/instrumentFactory.js"></script>
-    <script src="/app/shared/cookiesFactory.js"></script>
-    <script src="/app/shared/zoomPanDirective.js"></script>
+    <script src="/app/shared/stateFactory.js"></script>
+    <script src="/app/shared/cookiesDirective.js"></script>
 
     <script src="/app/shared/values.js"></script>
     <script src="/app/components/scales/scalesController.js"></script>
     <script src="/app/components/scales/scalesFactory.js"></script>
+    <script src="/app/components/scales/zoomPanDirective.js"></script>
     <script src="/app/components/scales/instrumentModalDirective.js"></script>
 </body>
 </html>
