Started circle of fifths

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,9 @@
     <script src="/app/components/scales/scalesFactory.js"></script>
     <script src="/app/components/scales/zoomPanDirective.js"></script>
     <script src="/app/components/scales/instrumentModalDirective.js"></script>
+
+    <script src="/app/components/circle-of-fifths/circleController.js"></script>
+
     <!-- endbuild -->
 </body>
 </html>
