--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/scales.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/modal.css">
 
+    <link rel="stylesheet" type="text/css" href="/assets/css/metronome.css">
+
 
     <!-- AngularJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
@@ -36,11 +38,14 @@
     <!--[if gt IE 8]><!--> <!--<![endif]--> 
 
 </head>
-<body ng-controller="mainController as app">
+<body id="ng-app" ng-controller="mainController as app">
 
-    <div class="nav">
+    <div class="nav clearfix">
         <a class="brand" href="/">Musicianist</a>
         <ul class="navbar navbar-right">
+            <li>
+                <metronome></metronome>
+            </li>
             <li><a ng-class="app.menuClass('scales')" href="/scales/">Scales</a></li>
             <li><a ng-class="app.menuClass('chords')" href="/chords/">Chords</a></li>
             <li><a ng-class="app.menuClass('circle-of-fifths')" href="/circle-of-fifths/">Circle of Fifths</a></li>
@@ -136,34 +141,15 @@
             <input id="result" name="result" type="textfield"/>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- -->
-
-    
  
     <div cookies></div>
 
     <!--build:js js/lib.js -->
+    <script src="/app/components/metronome/monkeypatch.js"></script>
     <script src="/assets/lib/snap/snap.svg.js"></script>
     <script src="/assets/lib/mousewheel.js"></script>
     <!-- endbuild -->
+
     <!--build:js js/app.js -->
     <script src="/app/app.module.js"></script>
     <script src="/app/app.routes.js"></script>
@@ -183,9 +169,13 @@
     <script src="/app/components/scales/zoomPanDirective.js"></script>
     <script src="/app/components/scales/instrumentModalDirective.js"></script>
 
+    <script src="/app/components/metronome/defaultMetronomeFactory.js"></script>
+    <script src="/app/components/metronome/metronomeDirective.js"></script>
+
     <script src="/app/components/circle-of-fifths/circleController.js"></script>
 
     <!-- endbuild -->
+
 </body>
 </html>
 
