--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="musicianist">
 <head>
-    <title>TODO</title>
+    <title>Musicianist</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
@@ -15,6 +15,7 @@
     
     <!--build:css css/app.css -->
     <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/colors.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/page-layout.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/scales.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/circle-of-fifths.css">
@@ -52,7 +53,6 @@
     </div>
 
 
-    <div class="content">
         <div ng-view></div>
 
         <noscript>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </noscript>
-    </div>
+    
 
 
     <!--
@@ -210,6 +210,7 @@
     <script src="/app/components/metronome/monkeypatch.js"></script>
     <script src="/assets/lib/snap/snap.svg.js"></script>
     <script src="/assets/lib/mousewheel.js"></script>
+    <script src="/assets/lib/angular-location-update.js"></script>
     <!-- endbuild -->
 
     <!--build:js js/app.js -->
